--- a/src/blocks/b-reviews-filter/b-reviews-filter.less
+++ b/src/blocks/b-reviews-filter/b-reviews-filter.less
@@ -1,14 +1,15 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-reviews-filter {
 }
 
 .b-reviews-filter__item {
-	font-size: 26px;
+	.my-heading-lead();
 	line-height: 1.4;
 	color: @block-link-color;
-	margin: 10px 20px;
+	margin: 10px 15px;
 	display: inline-block;
 	position: relative;
 
