--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -59,9 +59,10 @@ block content
                                 span.b-portfolio__type.b-portfolio__type_story СТОРИС
                                 p.b-portfolio__date 10.02.2010
             #reviews.tab-pane(role="tabpanel")
-                .b-reviews__container.g-pb90.g-mb20
+                .b-reviews__container.b-reviews__container_background_white.g-pb90.g-mb20
                     .b-reviews__list
                         .b-reviews__item.emerge.b-reviews__item_type_video(data-effect="relax", data-origin="top", data-expose="true")
+                            .b-reviews__gutter
                             .b-reviews__header
                                 a.b-reviews__type(href='#') Видеоотзывы
                             .text-center: a.b-reviews__title(href='client.html') 1ДСКиКО
