--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -83,7 +83,8 @@ block content
                         li Глаза человечка на баннере следят за курсором - поводите его туда-сюда по баннеру.
                         li Баннер по итогу весит всего 46 кб, что позволяет его использоваться на большинстве рекламных площадок.
         .b-portfolio.g-pb80
-            h5.b-portfolio__header.b-portfolio__header_small Похожие баннеры
+            .container
+                h5.b-portfolio__header.b-portfolio__header_small Похожие баннеры
 
             .b-portfolio__list.b-portfolio__list_faded
                 - for (var i=0; i<6;++i)
