--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -31,6 +31,7 @@ block content
         .b-reviews__container
             .b-reviews__list
                 .b-reviews__item.emerge.b-reviews__item_type_video(data-effect="relax", data-origin="top", data-expose="true")
+                    .b-reviews__gutter
                     .b-reviews__header
                         a.b-reviews__type(href='#') Видеоотзывы
                     .text-center: a.b-reviews__title(href='client.html') 1ДСКиКО
