--- a/src/blocks/b-call-widget/b-call-widget.less
+++ b/src/blocks/b-call-widget/b-call-widget.less
@@ -101,15 +101,14 @@
 	background-color: #acc000;
 	text-transform: uppercase;
 	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out, transform 0.3s ease-in-out 0.2s, opacity 0.3s ease-in-out 0.2s;
-	box-shadow: 0px 10px 40px -5px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 10px 40px -5px rgba(172, 192, 0, 0.6);
 
 	&:hover, &:active, &:focus {
-		background-color: #ffffff;
-		color: #acc000;
+		background-color: #b4cc00;
+		color: #ffffff;
 		text-decoration: none;
 	}
 
-	//transition: all 0.3s ease-out;
 	transform: translate3d(0px, 0px, 0px);
 	opacity: 1;
 }
