--- a/src/blocks/b-portfolio-tag/b-portfolio-tag.less
+++ b/src/blocks/b-portfolio-tag/b-portfolio-tag.less
@@ -16,6 +16,7 @@
 
 	&_detailview
 	{
+		text-align: center;
 		padding-top: 4px;
 		padding-bottom: 40px;
 		margin : 0 -15px;
@@ -52,6 +53,10 @@
 	text-transform     : uppercase;
 	letter-spacing     : .1em;
 	text-decoration    : none !important;
+
+	&.swiper-slide {
+		width: auto;
+	}
 
 	&:before
 	{
