--- a/src/templates/portfolio_type_5.jade
+++ b/src/templates/portfolio_type_5.jade
@@ -12,9 +12,20 @@ block content
                         a.swiper-slide.b-filter__item.b-filter__item_with-arrow(href='portfolio_type_4.html'): span.b-filter__title По размерам
                         a.swiper-slide.b-filter__item.b-filter__item_with-arrow.b-filter__item_active(href='portfolio_type_5.html'): span.b-filter__title По стилям
                         a.swiper-slide.b-filter__item.b-filter__item_with-arrow(href='#'): span.b-filter__title По площадкам
-            .b-portfolio-tag-outer
-                a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_selected.b-portfolio-tag_text(data-tag-background="#ffffff", data-tag-background-hover, data-tag-color="#161f6a", data-tag-color-hover, href="#") РЕАЛИЗМ
-                a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+            .b-portfolio-tag-outer.swiper-container
+                .swiper-wrapper
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_selected.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover, data-tag-color="#161f6a", data-tag-color-hover, href="#") РЕАЛИЗМ
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover, data-tag-color="#161f6a", data-tag-color-hover, href="#") РЕАЛИЗМ
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover, data-tag-color="#161f6a", data-tag-color-hover, href="#") РЕАЛИЗМ
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover, data-tag-color="#161f6a", data-tag-color-hover, href="#") РЕАЛИЗМ
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover, data-tag-color="#161f6a", data-tag-color-hover, href="#") РЕАЛИЗМ
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover, data-tag-color="#161f6a", data-tag-color-hover, href="#") РЕАЛИЗМ
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
 
         .b-portfolio
             .container
