--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -293,9 +293,11 @@ html.videoautoplay .b-portfolio__video {
 .b-portfolio__category {
 	font-size: 10px;
 	margin-left: 7px;
+	margin-right: 7px;
 	text-transform: uppercase;
 	letter-spacing: 0.140em;
 	line-height: 1.4;
+	font-weight: 500;
 }
 
 .b-portfolio__date {
