--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -4,6 +4,14 @@
 
 .b-page {
 	position: relative;
+
+	&__header {
+		margin-bottom: 80px;
+
+		@media (min-width: @screen-md-min) {
+			margin-bottom: 100px;
+		}
+	}
 }
 
 .b-page__title {
