--- a/src/blocks/b-language-tabs/b-language-tabs.less
+++ b/src/blocks/b-language-tabs/b-language-tabs.less
@@ -62,6 +62,10 @@
 	}
 }
 
+.fancybox-inner .b-language-tabs__link {
+	font-size: 24px;
+}
+
 .b-language-tabs__item.active .b-language-tabs__link {
 	color: @block-link-hover-color;
 
