--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -53,6 +53,20 @@
 	}
 }
 
+// Подзаголовок (уменьшенный)
+.my-heading-h2-small() {
+	font-size: 40px;
+	font-weight: bold;
+
+	@media (min-width: @screen-md-min) {
+		font-size: 50px;
+	}
+
+	@media (min-width: @screen-xl-min) {
+		font-size: 60px;
+	}
+}
+
 // Описание к заголовку
 .my-heading-lead() {
 	font-size: 22px;
