--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -1,7 +1,8 @@
 .b-call-widget.b-call-widget__collapsed
-    .b-call-widget__button
+    .b-call-widget__overlay
     .b-call-widget__content
         iframe#callbackFrame(src='http://82.193.158.2:3002/widget.html')
+    .b-call-widget__button
     a.b-call-widget__link(href='https://tolkunov.com/order') Заказать
 script.
     /* When iframe is loaded */
