--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -3,9 +3,7 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
-            .b-portfolio-item__date 2 марта 2016
-
-            h1.b-page__title.b-page__title_small #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] «Лучший брокер»
+            h1.b-page__title.b-page__title_small #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] «Экономическая игра»
 
             .b-language-tabs
                 ul.b-language-tabs__list(role="tablist")
@@ -68,11 +66,17 @@ block content
                             #banner_language_en_size_160_600.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     img.b-portfolio-item__image.img-responsive(src='http://placehold.it/160x600', alt='')
+                .b-portfolio-item__date 2 марта 2016
                 .b-portfolio-tag-outer.b-portfolio-tag-outer_detailview
                     a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#ff0000', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
                       img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Яндекс-Лого.png', src='/assets/img/tmp/portfolio-tag/Яндекс-Лого.png', alt='Яндекс')
                     a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#FEBB00', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
                       img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Google-Лого.png', src='/assets/img/tmp/portfolio-tag/Google-Лого.png', alt='Рамблер')
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") html5
+                    a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_text.swiper-slide(data-tag-background="#ffffff", data-tag-background-hover="#161f6a", data-tag-color="#161f6a", data-tag-color-hover="#ffffff", href="#") мультипликация
 
                 .b-portfolio-item__text.b-text
                     p Интерактивный флеш-баннер 240x400 для компании WikiPlanet, которая занимается организацией туров по всей России. Кстати, актуально при нынешнем курсе доллара.
