--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -12,6 +12,21 @@
 	font-weight: bold;
 	letter-spacing: .1em;
 	margin-bottom: 26px;
+
+	float: right;
+
+	/* styles from portfolio tags */
+	margin: 7.5px;
+	font-size: 12px;
+	line-height: 36px;
+	height: 36px;
+
+	font-weight: 700;
+	letter-spacing: .1em;
+
+	margin-left: 15px;
+	margin-top: 4px + 8px;
+	margin-bottom: 6.5px;
 }
 
 .b-portfolio-item__view {
