--- a/src/templates/portfolio_item_1_ajax.jade
+++ b/src/templates/portfolio_item_1_ajax.jade
@@ -1,6 +1,4 @@
 #portfolio_1(style='width:1080px;padding:80px 40px 0;background:#fff;border-radius:15px;')
-    .b-portfolio-item__date 2 марта 2016
-
     h1.b-page__title.b-page__title_small #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] “Лучший брокер”
 
     .b-language-tabs
@@ -48,9 +46,18 @@
                     #banner_language_en_size_160_600.tab-pane(role="tabpanel")
                         .b-portfolio-item__view
                             img.b-portfolio-item__image.img-responsive(src='http://placehold.it/160x600', alt='')
+        .b-portfolio-item__date 2 марта 2016
         .b-portfolio-tag-outer.b-portfolio-tag-outer_detailview
             a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#ff0000', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
                 img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Яндекс-Лого.png', src='/assets/img/tmp/portfolio-tag/Яндекс-Лого.png', alt='Яндекс')
+            a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#FEBB00', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
+                img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Google-Лого.png', src='/assets/img/tmp/portfolio-tag/Google-Лого.png', alt='Рамблер')
+            a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#FEBB00', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
+                img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Google-Лого.png', src='/assets/img/tmp/portfolio-tag/Google-Лого.png', alt='Рамблер')
+            a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#FEBB00', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
+                img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Google-Лого.png', src='/assets/img/tmp/portfolio-tag/Google-Лого.png', alt='Рамблер')
+            a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#FEBB00', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
+                img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Google-Лого.png', src='/assets/img/tmp/portfolio-tag/Google-Лого.png', alt='Рамблер')
             a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#FEBB00', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
                 img.b-portfolio-tag__image(data-hover-src='/assets/img/tmp/portfolio-tag/hover/Google-Лого.png', src='/assets/img/tmp/portfolio-tag/Google-Лого.png', alt='Рамблер')
 
