fix horizontal portfolio list. add swiper to bower.json.

--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -77,6 +77,8 @@
 	max-width: @portfolio-width * 5;
 	width: @portfolio-width * 5;
 
+	height: (@portfolio-width * 3) + 20px;
+
 	margin-left: -10px;
 	margin-right: 0;
 
@@ -114,7 +116,7 @@
 	overflow: hidden;
 
 	@media (min-width: @portfolio-breakpoint) {
-		max-height: (204px + 20px) * 3;
+		max-height: ((204px + 20px) * 3) + 20px;
 	}
 
 	position: relative;
