--- a/src/templates/portfolio_item_1_ajax.jade
+++ b/src/templates/portfolio_item_1_ajax.jade
@@ -69,10 +69,10 @@
                 li При выборе отдыха необязательно кликать по кнопке "Рыбалка", достаточно подержать курсор над ней некоторое время, и баннер сам осуществит переход к следующей сцене. Это сделано для людей, которые опасаются кликать на интерактивные баннеры, т.к. научены горьким опытом обмана "лже-интерактивности".
                 li Глаза человечка на баннере следят за курсором - поводите его туда-сюда по баннеру.
                 li Баннер по итогу весит всего 46 кб, что позволяет его использоваться на большинстве рекламных площадок.
-        .b-portfolio.g-pb80
+        .b-portfolio.g-pb10
             h5.b-portfolio__header.b-portfolio__header_small Похожие баннеры
 
-            .b-portfolio__list.b-portfolio__list_faded
+            .b-portfolio__list.b-portfolio__list_horizontal.b-portfolio__list_faded
                 - for (var i=0; i<6;++i)
                     a.b-portfolio__item(href='portfolio_item_1_ajax.html', rel='portfolio', data-effect="relax", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio1.png')
